--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
 <head lang="en">
     <meta charset="UTF-8">
-    <title>新生大学</title>
+    <title>刘小昊的学习库</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <link rel="stylesheet" href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="./public/style.css">
@@ -12,7 +12,7 @@
 <div>
   <div class="main-header">
     <div class="container">
-      <h1>JavaScript编程入门</h1>
+      <h1>JavaScript开始之路</h1>
     </div>
   </div>
   <div class="container">
