--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <div>
   <div class="main-header">
     <div class="container">
-      <h1>JavaScript开始之路</h1>
+      <h1>JavaScript伟大航路</h1>
     </div>
   </div>
   <div class="container">
